java-eks/java-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: default-mzc-011
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /a
        backend:
          serviceName: default-mzc-011
          servicePort: 8080
